--- a/_includes/header.html
+++ b/_includes/header.html
@@ -45,7 +45,9 @@
 	</nav>
 		{% if page.noimage %}
 		{% else %}
-
+		<img
+			alt="{{ page.title }}"
+			src="/assets/images/{{page.id}}/top.jpg" class="img-responsive">
 		{% endif %}
 
 	<div class="jumbotron  clearfix">
